--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+db.json
 
 # Unit test / coverage reports
 htmlcov/
@@ -83,6 +84,7 @@ ipython_config.py
 
 # pyenv
 .python-version
+start.sh
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
